# is-odd-ai

./: .gitignore  DigitTransformer.py  EvenOddDataset.py  main.py  pyproject.toml  readme.md  train.py
