[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "is-odd-ai"
version = "0.1.0"
description = "A Transformer-based model for predicting odd or even numbers."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Brishen Hawkins", email = "brishen.hawkins@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = ["oddness", "even", "transformer", "ml", "cli"]

[project.dependencies]
torch = "*"
click = "*"
scikit-learn = "*"

[project.urls]
"Homepage" = "https://github.com/brishen/is-odd-ai"
"Documentation" = "https://github.com/brishen/is-odd-ai#readme"
"Source" = "https://github.com/brishen/is-odd-ai"
"Bug Tracker" = "https://github.com/brishen/is-odd-ai/issues"
